# EssentialInstaller

./: .gitignore  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build-and-release.yml  build-uninstaller.yml  build-workflow.yml  build.yml
installer/: build.gradle.kts
installer/src/main/kotlin/gg/essential/installer/: NvgFontProvider.kt  main.kt
installer/src/main/kotlin/gg/essential/installer/download/: DownloadRequest.kt  DownloadStep.kt  HttpManager.kt  httpUtils.kt
installer/src/main/kotlin/gg/essential/installer/gui/: InstallerPage.kt  InstallerPalette.kt  PageHandler.kt  StatePage.kt
installer/src/main/kotlin/gg/essential/installer/install/: ChainedInstallStep.kt  ErrorInstallStep.kt  InstallStep.kt  InstallSteps.kt  Installation.kt  SingleInstallStep.kt  extensions.kt
installer/src/main/kotlin/gg/essential/installer/launcher/: InstallInfo.kt  Installation.kt  Launcher.kt  LauncherType.kt  Launchers.kt
installer/src/main/kotlin/gg/essential/installer/logging/: Logging.kt
installer/src/main/kotlin/gg/essential/installer/metadata/: DataProviderStrategy.kt  InstallerDataProviders.kt  MetadataManager.kt  metadatsUtils.kt
installer/src/main/kotlin/gg/essential/installer/minecraft/: MCVersion.kt
installer/src/main/kotlin/gg/essential/installer/mod/: ModManager.kt  ModVersion.kt  ModVersions.kt
installer/src/main/kotlin/gg/essential/installer/modloader/: FabricModloader.kt  ForgeModloader.kt  ModernMinecraftVersionProfile.kt  Modloader.kt  ModloaderInfo.kt  ModloaderType.kt  ModloaderVersion.kt  ModloaderVersions.kt  NeoForgeModloader.kt
installer/src/main/kotlin/gg/essential/installer/platform/: FileUtils.kt  Platform.kt
installer/src/main/kotlin/gg/essential/installer/util/: Fonts.kt  InstantAsIso8601Serializer.kt  checksumUtils.kt  jsonExtensions.kt  windowsRegistryUtils.kt
installer/src/main/resources/: installer-data-providers.json  installer-metadata.json  log4j2.xml  mod-metadata.json
scripts/: macos-full.sh  make-macos-app.sh  replace-font.sh  sign-macos-app.sh  upload-all.sh
uninstaller/: Cargo.toml  build.rs
uninstaller/src/: main.rs
wrapper/: Cargo.toml  build.rs
wrapper/resources/: macos-icon.icns
wrapper/resources/info/: README.md  macos-app-id.txt  support-url.txt
wrapper/src/: app.rs  download.rs  file.rs  fonts.rs  installer.rs  java.rs  logging.rs  macros.rs  main.rs  process.rs  util.rs
(+60 files in other folders)
