[package]
name = "installer-wrapper"
version = "3.1.0" # Remember to change this in the macOS properties xml, until we do this automatically
edition = "2021"

[dependencies]
iced = { version = "0.12.1", features = ["image", "tokio"] }
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "blocking", "json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
zip-extract = { version = "0.2.1" }
open = "5.3.2"
dirs = "5.0.1"
log = "0.4.26"
log4rs = "1.3.0"
arboard = "3.4.1"
zip = "2.4.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[profile.release]
opt-level = "z"
strip = true
lto = true

[build-dependencies]
winresource = "0.1.20"
