[package]
name = "installer-wrapper"
version = "3.1.1" # Remember to change this in the macOS properties xml, until we do this automatically
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["image", "tokio", "advanced"] }
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "blocking", "json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
zip = "5.1.1"
open = "5.3.2"
dirs = "6.0.0"
log = "0.4.28"
log4rs = "1.4.0"
arboard = "3.6.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[profile.release]
opt-level = "z"
strip = true
lto = true

[build-dependencies]
winresource = "0.1.23"
