[package]
name = "installer-wrapper"
version = "3.2.1" # Remember to change this in the macOS properties xml, until we do this automatically
edition = "2021"

[dependencies]
# Since 0.14 is not released yet, lock to current latest commit on master
iced = { git = "https://github.com/iced-rs/iced", rev = "92888a3639bdfb8e4ebea91e752d25825d8d8886", features = ["image", "tokio", "advanced"] }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "blocking", "json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
zip = "6.0.0"
open = "5.3.2"
dirs = "6.0.0"
log4rs = "1.4.0"
arboard = "3.6.1"
log = "0.4.28"

# Workaround for macOS Sequoia (15.0+) objc2-foundation compatibility issue
[profile.dev.package.objc2]
debug-assertions = false

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[profile.release]
opt-level = "z"
strip = true
lto = true

[build-dependencies]
winresource = "0.1.23"
